<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context="com.aramesan.android.appportfolio.MainActivity">

        <TextView
            android:id="@+id/tViewHeading"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.07"
            android:gravity="center_vertical"
            android:text="@string/app_main_heading"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnApp1"
            android:onClick="displayToast"
            android:text="@string/app_button_1"
            style="@style/CustomButtonStyle1" />

        <Button
            android:id="@+id/btnApp2"
            android:onClick="displayToast"
            android:text="@string/app_button_2"
            style="@style/CustomButtonStyle1" />

        <Button
            android:id="@+id/btnApp3"
            android:onClick="displayToast"
            android:text="@string/app_button_3"
            style="@style/CustomButtonStyle1" />

        <Button
            android:id="@+id/btnApp4"
            android:onClick="displayToast"
            android:text="@string/app_button_4"
            style="@style/CustomButtonStyle1" />

        <Button
            android:id="@+id/btnApp5"
            android:onClick="displayToast"
            android:text="@string/app_button_5"
            style="@style/CustomButtonStyle1" />

        <Button
            android:id="@+id/btnApp6"
            android:onClick="displayToast"
            android:text="@string/app_button_6"
            style="@style/CustomButtonStyle2" />

    </LinearLayout>
</ScrollView>
